fix style card spacing and margins.

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,6 +1,11 @@
 /* Typography */
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Handlee', cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Handlee", cursive;
 }
 
 /* Body and Layout */
@@ -14,7 +19,6 @@ main {
     margin: 2rem 0;
 }
 
-
 /* Navbar */
 .navbar {
     position: sticky;
@@ -23,11 +27,11 @@ main {
 }
 
 .navbar-custom {
-    color: #3B2F2F;
+    color: #3b2f2f;
 }
 
 .navbar-custom .nav-link {
-    color: #3B2F2F;
+    color: #3b2f2f;
 }
 
 .navbar-custom .nav-link.active {
@@ -36,40 +40,44 @@ main {
 
 /* Hero Section */
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/hero.webp');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../images/hero.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #FFEBD4;
+    color: #ffebd4;
     padding: 8rem 0;
 }
 
 /* Footer */
 .footer {
     margin-top: auto;
-    background-color: #6F4E37;
-    color: #FFEBD4;
+    background-color: #6f4e37;
+    color: #ffebd4;
 }
 
-.footer i.bi {
-    color: #FFEBD4;
+.footer .social-links i {
+    color:#ffebd4;
+    font-size: 1.5rem;
+    
 }
+
 
 /* Navigation */
-.nav-item.active .nav-link {
-    color: #000000;
-    font-weight: bolder;
-}
+
 
 /* Cards */
-.card {
+#services .card {
     border: none;
 }
 
-.card-img-top {
+#services .card-img-top {
     height: 200px;
     object-fit: cover;
 }
+
+#services .card {
+    margin-bottom: 1.5rem;
 
 /* Testimonial Images */
 .testimonial-image {
@@ -80,4 +88,40 @@ main {
 /* Rounded Images */
 .rounded-image {
     border-radius: 15px;
+}
+
+
+ /* media quieries */
+
+ /* Medium devices (tablets, 768px and up) */
+@media screen and (min-width: 768px) {
+    /* Make all service cards the same height for consistency */
+    #services .card-body {
+        min-height: auto;
+        margin-top: 1rem;
+    }
+}
+
+/* Large devices (small laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+    /* Make all service cards the same height for consistency */
+    #services .card-body {
+        min-height: auto;
+    }
+}
+
+/* xl devices (large desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+    /* make all service cards the same height for consistency */
+    #services .card-body {
+        min-height: 220px;
+    }
+}
+
+/* xxl devices (larger desktops, 1400px and up) */
+@media screen and (min-width: 1400px) {
+    /* make all service cards the same height for consistency */
+    #services .card-body {
+        min-height: 195px;
+    }
 }
